--- a/layercupang/package.json
+++ b/layercupang/package.json
@@ -1,27 +1,38 @@
 {
   "name": "layercupang",
-  "version": "0.1.0",
-  "private": true,
+  "version": "2.0.0",
+  "description": "tea testnet project x layer dev",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/itsaldoxyz/layercupang"
+  },
+  "keywords": [
+    "crypto",
+    "layer1",
+    "layer2",
+    "layer3",
+    "developer",
+    "teatestnet",
+    "projectdev",
+    "btc",
+    "eth",
+    "bnb",
+    "sol"
+  ],
+  "author": "Layer Cupang",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/itsaldoxyz/layercupang/issues"
+  },
+  "homepage": "https://github.com/itsaldoxyz/layercupang#readme",
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "crypto-encrypt": "^2.0.0",
+    "express": "^4.18.3",
+    "layer-dev": "^1.0.0",
+    "layercupang": "^2.0.0"
   }
 }
